update Dockerfile and README

--- a/1.0-encrypt/Dockerfile
+++ b/1.0-encrypt/Dockerfile
@@ -2,8 +2,7 @@ FROM centos/s2i-core-centos7
 MAINTAINER Juan Luis Goldaracena
 
 ## CREATE FOLDERS FOR INSTALL SOFTWARE VERSION
-RUN mkdir -p /opt/clientesapp && chgrp -R 0 /opt/clientesapp && \
-    mkdir -p /opt/clientesapp/uploads && chgrp -R 0 /opt/clientesapp/uploads
+RUN mkdir -p /opt/clientesapp && chgrp -R 0 /opt/clientesapp
 
 ## INSTALL DEV PACKAGES
 RUN yum install epel-release curl java-1.8.0-openjdk glibc telnet net-tools \
@@ -15,9 +14,8 @@ RUN adduser --system -s /bin/bash -u 10001 -g 0 clientesapp
 ## INSTALL ENCRYPT SOFTWARE VERSION
 ADD latest_version/sb-jpa-santander-clientes-1.0.encrypt /tmp
 
-## FIX PERMISSIONS FOR '/opt/clientesapp' and '/opt/clientesapp/uploads' FOLDERS
-RUN chmod 775 -R /opt/clientesapp && chown -R 10001 /opt/clientesapp && \
-    chmod 775 -R /opt/clientesapp/uploads && chown -R 10001 /opt/clientesapp/uploads
+## FIX PERMISSIONS FOR '/opt/clientesapp' FOLDER
+RUN chmod 775 -R /opt/clientesapp && chown -R 10001 /opt/clientesapp
 
 ## COPY 'entrypoint.sh' WITH SECURIZATION FOR DECRYPT JAR FILES
 COPY entrypoint.sh /tmp/entrypoint.sh
